--- a/SparkonicsWebsite-master/css/animate.css
+++ b/SparkonicsWebsite-master/css/animate.css
@@ -7,6 +7,91 @@
  *
  * Copyright (c) 2017 Daniel Eden
  */
+ 
+ /* Basic styling for navigation 
+.site-nav {
+  background-color: #333;
+  overflow: hidden;
+}
+
+.site-nav .nav-off-canvas {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.site-nav .nav-off-canvas li {
+  float: left;
+  display: inline;
+  position: relative;
+}
+
+.site-nav .nav-off-canvas li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+.site-nav .nav-off-canvas li a:hover {
+  background-color: #111;
+}
+
+/* Dropdown container 
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+/* Links inside the dropdown 
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+
+/* Show the dropdown menu on hover 
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Mobile view button styling 
+.nav-mobile {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .nav-mobile {
+      display: block;
+  }
+
+  .nav-off-canvas {
+      display: none;
+  }
+
+  .nav-off-canvas li {
+      float: none;
+      display: block;
+  }
+
+  .nav-off-canvas.show {
+      display: block;
+  }
+}
+
+/* new thing for drop down added */
+
 
 .animated {
   animation-duration: 1s;
